--- a/duchamp_reader/templates/pages/artiste_add.html
+++ b/duchamp_reader/templates/pages/artiste_add.html
@@ -79,14 +79,14 @@
         {% endif %}
     {% endwith %}
 
-    <!-- flash de tout va bien -->
+    <!-- le flash de tout va bien est dans le conteneur
     {% with messages = get_flashed_messages(category_filter=["success"]) %}
         {% if messages %}
             <div class="alert-success">
                 <p>{{ messages }}</p>
             </div>
         {% endif %}
-    {% endwith %}
+    {% endwith %} -->
 
     <!-- footer -->
     <div class="basdepage">
