--- a/duchamp_reader/templates/pages/artiste_add.html
+++ b/duchamp_reader/templates/pages/artiste_add.html
@@ -38,6 +38,7 @@
             <label for="artiste-genre" class="col-sm-2 col-form-label">Genre</label>
             <div class="col-sm-10 dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <select type="text" class="form-select" id="artiste-genre" name="genre" aria-expanded="false">
+                    <option>Sélectionner un genre</option>
                     <option value="F">Femme</option>
                     <option value="M">Homme</option>
                     <option value="A">Autre / non-binaire</option>
