--- a/duchamp_reader/templates/pages/artiste_main.html
+++ b/duchamp_reader/templates/pages/artiste_main.html
@@ -89,19 +89,23 @@
         {% endif %}
         {% if formation %}
             <h4>Formation</h4>
-            <p style="white-space:pre-wrap">{{formation}}</p>
+            <p style="white-space:pre-wrap">{{ formation }}</p>
         {% endif %}
         {% if carriere %}
             <h4>Carrière</h4>
-            <p style="white-space:pre-wrap">{{carriere}}</p>
+            <p style="white-space:pre-wrap">{{ carriere }}</p>
         {% endif %}
         {% if travail %}
             <h4>Travail artistique</h4>
-            <p style="white-space:pre-wrap">{{travail}}</p>
+            <p style="white-space:pre-wrap">{{ travail }}</p>
         {% endif %}
         {% if oeuvre %}
             <h4>Pratique artistique et oeuvre</h4>
-            <p style="white-space:pre-wrap">{{oeuvre}}</p>
+            <p style="white-space:pre-wrap">{{ oeuvre }}</p>
+        {% endif %}
+        {% if oeuvres %}
+            <h4>Pratique artistique et oeuvre</h4>
+            <p style="white-space:pre-wrap">{{ oeuvres }}</p>
         {% endif %}
         {% if code == "no" %}
             <p>La page wikipedia de cet.te artiste n'a pas été trouvée ! Si vous voulez vous cultiver ou procrastiner, pourquoi ne pas visiter une de ces pages au hasard ?</p>
