--- a/duchamp_reader/templates/pages/artiste_add.html
+++ b/duchamp_reader/templates/pages/artiste_add.html
@@ -1,6 +1,6 @@
 {% extends "conteneur.html" %}
 
-{% block titre %}| Nouvel.le artiste{% endblock %}
+{% block titre %}| nouvel.le artiste{% endblock %}
 
 {% block corps %}
     <h1>Ajouter un.e nouvel.le artiste à la base de données</h1>
