--- a/duchamp_reader/templates/pages/artiste_main.html
+++ b/duchamp_reader/templates/pages/artiste_main.html
@@ -130,7 +130,7 @@
 
                 <!-- Julian Creuzet -->
                 {% if nomination.id_artiste == 20 %}
-                    <div class="slides">
+                    <div class="img-thumbnail slides">
                         <img src="../static/images/2021duchamp_creuzet1.jpg" class="shown"/>
                         <img src="../static/images/2021duchamp_creuzet2.jpg" class="slide"/>
                         <img src="../static/images/2021duchamp_creuzet3.jpg" class="slide"/>
@@ -139,7 +139,7 @@
 
                 <!-- Isabelle Cornaro <3 -->
                 {% if nomination.id_artiste == 19 %}
-                    <div class="slides">
+                    <div class="img-thumbnail slides">
                         <img src="../static/images/2021duchamp_cornaro1.jpg" class="shown"/>
                         <img src="../static/images/2021duchamp_cornaro2.jpg" class="slide"/>
                         <img src="../static/images/2021duchamp_cornaro3.jpg" class="slide"/>
@@ -150,7 +150,7 @@
 
                 <!-- Lili Reynaud Dewar -->
                 {% if nomination.id_artiste == 17 %}
-                    <div class="slides">
+                    <div class="img-thumbnail slides">
                         <img src="../static/images/2021duchamp_reynauddewar1.jpg" class="shown"/>
                         <img src="../static/images/2021duchamp_reynauddewar2.jpg" class="slide"/>
                     </div>
