--- a/duchamp_reader/templates/pages/connexion.html
+++ b/duchamp_reader/templates/pages/connexion.html
@@ -1,6 +1,6 @@
 {% extends "conteneur.html" %}
 
-{% block titre %}| Connexion {% endblock %}
+{% block titre %}| connexion {% endblock %}
 
 {% block corps %}
     <h1>Connexion</h1>
