--- a/duchamp_reader/templates/pages/inscription.html
+++ b/duchamp_reader/templates/pages/inscription.html
@@ -1,6 +1,6 @@
 {% extends "conteneur.html" %}
 
-{% block titre %}| Inscription{% endblock %}
+{% block titre %}| inscription{% endblock %}
 
 {% block corps %}
     <h1>Inscription</h1>
