--- a/duchamp_reader/templates/pages/duchamp_sparqler.html
+++ b/duchamp_reader/templates/pages/duchamp_sparqler.html
@@ -8,7 +8,7 @@
     <!-- corps du texte -->
     <p>Le duchamp_reader gère la construction de requêtes SPARQL sur les artistes et permet
         de télécharger les résultats. Pour lancer une requête, cocher les champs sur lesquels
-        lancer une requmete et cliquer sur "Rechercher".</p>
+        lancer une requête et cliquer sur "Rechercher".</p>
     <form class="form" method="POST" action="{{ url_for('sparql') }}">
         <!-- artiste recherché.e -->
         <div class="form-group row">
