--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -123,6 +123,11 @@
                                 {% endif %}
                             </ul>
                         </li>
+                        <li class="active" id="duchampSparqler">
+                            <a href="{{ url_for('sparql') }}">
+                                duchamp_sparqler
+                            </a>
+                        </li>
                         <li class="active" id="sidebarAbout">
                             <a href="{{ url_for('about') }}">
                                 À propos
