--- a/duchamp_reader/templates/pages/nomination_add.html
+++ b/duchamp_reader/templates/pages/nomination_add.html
@@ -29,7 +29,7 @@
         <div class="form-group row">
             <label for="annee-nomination" class="col-sm-2 col-form-label">Année de la nomination</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="annee-nomination" name="annee" placeholder="Année de la nomination au format AAAA (ex: 2017)"/>
+                <input type="text" class="form-control" id="annee-nomination" name="annee_nomination" placeholder="Année de la nomination au format AAAA (ex: 2017)"/>
             </div>
         </div>
 
