--- a/duchamp_reader/templates/pages/theme_main.html
+++ b/duchamp_reader/templates/pages/theme_main.html
@@ -35,6 +35,8 @@
     <!-- footer -->
     <div class="basdepage">
         <a class="btn" href="{{url_for('accueil')}}">Accueil</a>
+        <a class="btn" href="{{url_for('theme_add')}}">Ajouter un thème</a>
+        <a class="btn" href="{{url_for('theme_update', id_theme=theme.id) }}">Modifier ce thème</a>
         <a class="btn" href="{{url_for('theme_index')}}">Index des thèmes</a>
     </div>
 
